@@ -28,6 +28,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20141004
+* bug fix in Python-bindings
+
 20140930
 * removed README.macosx
 * changes for project site move
